Use S3 state backend for example
This configures the example and GitLab pipeline to use the remote
Terraform state stored in S3.

* The 's3' backend config is added to example/versions.tf
* The GitLab pipeline sets the `-backend-config` argument and points to
  `TF_BACKEND_CONFIG` - a variable in GitLab CI/CD.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,8 +31,11 @@ tf:plan:
   extends: ._terraform_base
   stage: Plan
   script:
+    # NOTE: The TF_BACKEND_CONFIG is a variable _file_ provided
+    # by GitLab.
     - terraform init
       -no-color
+      -backend-config=${TF_BACKEND_CONFIG}
       -reconfigure
 
     - terraform validate
